Changelog
=========


2.0.5 (unreleased)
------------------

- Nothing changed yet.


2.0.4 (2012-03-28)
------------------

- Skipping duplicate users during LDAP import
  [lgraf]

- Add new DublinCoreMetaDataCollector Transport DataCollector
  Issue #1449 Successor Tasks: kopierte Dokumente sollten modification date und
  creator uebernehmen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1449
  [phgross]

2.0.3 (2012-02-27)
------------------

- Added is_group_member method to the contact_information utility.
  [phgross]

- Added French translations
  [ttschanz]

- Contact info describe(): add with_principal argument for removing
  principal (used in latex views).
  [jone]

- Fixed tests: Added opengever.repository to tests_require
  [lgraf]

- PAS plugin applies a request layer to the request.
  [jone]


2.0.2 (2012-01-18)
------------------

- Add AllUsersAndInboxesVocabulary.
  [jone]

- Adjust the collation settings for oracle connections (changed rom BINARY_CI to GERMAN_CI):
  to avoid problems with umlaut sorting.
  Issue #1328 NLS_SORT Parameter umstellen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1328
  [phgross]

- Fixed autocomplete_widget test:
  add a Mocked Indexer for the new containing_dossier indexer, to avoid a dependency.
  [phgross]

- Transporter: store original intid in annotations when transporting an object.
  [jone]

- Implement sort_dicts used for faster custom_sort methods for sorting on the readable fullname.
  Issue #1325 og.tabbedview: custom_sort methoden performanter implementieren.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1325
  [phgross]


2.0.1 (2011-12-20)
------------------

- Register PrettyPrinter from transmogrifier.
  [jone]


2.0 (2011-11-17)
----------------

- Made ldapsource section behave more robust if ldap plugin can't be found
  [lgraf]

- Avoid trying to traverse a Z3CFormValidation object in remote_request()